# seqpicker

./: .gitignore  README.md  environment.yml  pyproject.toml
src/seqpicker/: __init__.py  cli.py  core.py  repset.py  utils.py  wrappers.py
tests/: conftest.py  test_core.py  test_repset.py  test_utils.py
